third_party/move/move-compiler-v2/tests/checking/inlining/multiple_nesting.exp

Diagnostics:
error: invalid 'module' declaration
   ┌─ tests/checking/inlining/multiple_nesting.move:4:9
   │
 4 │         mathtest2::mul_div2(c, a, b)
   │         ^^^^^^^^^^^^^^^^^^^ '0x42::mathtest2' uses '0x42::mathtest'. This 'use' relationship creates a dependency cycle.
   ·
11 │         mathtest::mul_div(b, a, c)
   │         ----------------- '0x42::mathtest' uses '0x42::mathtest2'
